--- a/Excalidraw/Drawing 2025-11-02 14.53.43.excalidraw.md
+++ b/Excalidraw/Drawing 2025-11-02 14.53.43.excalidraw.md
@@ -11,79 +11,137 @@ tags: [excalidraw]
 
 ## Text Elements
 ## Embedded Files
-917ed93992aea117d03010c0fdf7adf679ed0606: $$O$$
+dd2203d81017d0948d9d48e55e56997190061f99: $$O$$
 
-37e99d2c817eb2dbb66be69671fd739cc1ff19e0: $$O'$$
+0a26b34490bff84db3395a97027246bb083f3518: $$P$$
 
-23b4961cecc8206f40e95299731976050fa43976: $$\vec{r}_{\text{com}}$$
+b670c8c7e3ac281b5787faa184c808e1ab660e22: $$r$$
 
-7bf5f42b466c4d76df371d0197108b7b1483e08b: $$\vec{r}'_{\text{com}}$$
+406ca5b26c7876f0e5d4e0e07835f88d09a0de8c: $$a$$
 
-c845889ce3c9b1f2c46f07eaeeb033c87f205da1: $$\vec{d}$$
+4aabe484dbc3bfbb306e672e87859b1c73b3499f: $$\theta$$
+
+e461c8827d42ee7c44ce2db7559b17790169c945: $$\varphi$$
+
+2b3159f4d4f44d6c9a4090b9524ac1170dc9b71b: $$r \mathrm{d}\theta$$
+
+500f5c9af079ee15e2db5383eaaeb9b10d8e0e90: $$F$$
+
+446c05a901fc9e29cdccebc29edad5a075c9edf4: $$M$$
 
 %%
 ## Drawing
 ```compressed-json
-N4KAkARALgngDgUwgLgAQQQDwMYEMA2AlgCYBOuA7hADTgQBuCpAzoQPYB2KqATLZMzYBXUtiRoIACyhQ4zZAHoFAc0JRJQgEYA6bGwC2CgF7N6hbEcK4OCtptbErHALRY8RMpWdx8Q1TdIEfARcZgRmBShcZQUebQBGADYEmjoghH0EDihmbgBtcDBQMBKIEm4IIQAVAEdmZ0JNAGYjACtcACl4gFUAUWIoAEkADgAFAAZUkshYRArcUlI2Kn5S
+N4KAkARALgngDgUwgLgAQQQDwMYEMA2AlgCYBOuA7hADTgQBuCpAzoQPYB2KqATLZMzYBXUtiRoIACyhQ4zZAHoFAc0JRJQgEYA6bGwC2CgF7N6hbEcK4OCtptbErHALRY8RMpWdx8Q1TdIEfARcZgRmBShcZQUebQBGADYEmjoghH0EDihmbgBtcDBQMBKIEm4IACVMAFUAdQBhABlJABYAaXoAVh4AEQBJADUhAEEmgDMYYlSSyFhECqCiOSR+
 
-zG5neKa4gBYmgE5h/YBWJPj9+PHhgHZVyBgN6/3tHZvxxOvj/evh0+Hhu4QCgkdTcHiJY4JHivY5NH6XYaJAGFSCSBCEZTSbjxbQ8BFNA7DHjDHbxS77QHWZTBbjjQHMKBLADWCAAwmx8GxSBUAMQ8ABm+wQOx2U1Kmlw2CZyiWQg4xHZnO5EkZ1mYcAWWSgYsg/MI+HwAGVYDSJIIPDqIAzmQgAOogyRg+mMtgs40wU3oc3lQGyzEccK5NDxQFs
+UsxuZwBOZMSAdi2AZi2uk4AOM729gAY+QsgYTZ4u5Na9xPj4nlbDg9bExJdNaQCgkdTcL7JeJnL48M6JX6JE6HeLAqQIQjKaQQ+JbbRnLbXLZ7U49eKtM6tVpo6zKYLca5o5hQUhsADWCAabHwbFIFQAxFtsIdEpoujNSppcNg2cpWUIOMQuTy+RIWdZmHBcIFshLIONCPh8ABlWD0iSCDx6iDM1kcupgyQM7RA+42lnshCmmDm9CW8po+VYjjhX
 
-DXYNQPYPjOkoiAy4RwQbEIOoPIAXUB/PImWT3A4QgNgMI8qw82ultl8oDzFTxWm0Hg4l4KIAvvSEAhiGDTgcmkiQ3HGCx2Fw0HDAcPWJwAHKcMTcUnxa7EnjjClxwjMAAi6SgXe4/IIYUBmmE8t6wUy2VTBaLcaEcGIuH33eD10S2ySXx4X0SgKIDgmXzQt8AAtgpQPNAj3wE84zgNgSxyfIUTAApphKWMMLAcZUMzVD0Iw8FIXiaFfjhYYESRO4
+JoVFutha7BqR7h66Mt1y4RwfrEMOoPIAXTR43ImTT3A4QiNaMIiqwFVwADlrfLFSHmBnirNoPBxLx7gBfJkIBDTNA8a5va5nHjkxJoxgsdhcQdbLZTpisTjVzhibgiw7Drq/aluwjMXrpKD97jjAhhNGaYSKgCiwUy2QzxdLbqEcGIuFPA9Q8XerTfLuJynGcaJEBwbJFiW+DgWwMpnmgF74GEhQ9oULaQOUEiDPokj0AAVlAmAIAA+v01Y1FAlT
 
-ShxPErgJQ5iSXdc8JRfCG3wUIoHZfR9DUV9RkQ7IQPvBsGQWKAACES0cDhlFEsC4yyYgZPlEsFLQO8lPEqJSCgABBRZljRXA31QbTARUoylgoUzzIgBZbMtIIzwoKDUBgsJCnbQp60gcoJBnbdtyMYZlGIDh+SqIxEmIGoACVSGUAB9ZgYAAeUtWZm0c4yVjjdY0E2S5tCaZcER2CEdmucZrluOMo1QZwqu0CFP37C5Eiq44IUBYEBkdcdtBOa54
+YGcgy9CMiRUGi8wdhgRqECs1obGgzjwtoxIUl8ZxdG8eyAZObpxqgzjPNc2iHF0SRXNc8Qoq0uJ7GioLEOC8Z4hS44oucCZ7GchxopIGJYlAELXLsCbwtcpI3OpNIcHSHaJq2tqesqvICkKIpitaUoysmCpKtyAVquQHCatqWS2bmhommabH+tMTIevajrOq6Pk5V66UVJldbCMGoYQmiUbSrGdneaUEWpum+Q5m6ea4AWv6vrBB4Vjx6C4AA8uV
 
-mOK4P1JHrEUBNEMSxNBoR2F5SJFfYYxuHg1x2Sl5M9LDSmtV02Q5LleQFIURUtCUpQTOUFTO5V0FVDh1U1ESs31I0TVy71u2dG17UGp042Ot1foqf7K2Ef1A2xUNw0jbEY0Be6kxTfIONKbNcFzczLM3UsivQXBhhhh6azrVDGzmJa2w7DyyVhHYLkOY5JyYacx1Qb5OZHWd52bYZyq/Sbix3PcPK8hBT3PYhLwyLVb1AwFH2fV9sQ/L8ISOaqAJ
+kWNs29xzO23A8N2vaIagu7bj01zbkuM6cNwrRbGBbrTiuHBrhwG6Ds58L7Ece2toex7BD+56Xgg163sQD4ZElGYFLMRRTVhv4QIkdTMO0cCDEchwAI7DQACjUd6Ef0ACKABS7QABp6qUrFVqQrJUFNXb3O1rYfl+D3hgB3yJAmWxvIuboQVBaC9XBCG/shqElOhJSYWUAOJNgAASlQw2czAo3UBEAGJC9L8QACoAJow7gWwUMa1o4xIeZ9p4zFuo
 
-LYCtNVuNOUg8yZcBBCkNTQiSjtzCaJwvCaIdsBnCaEbjjGiabm6+IZv/VD3eW1blo2ybtvGHY2OmbHIC4hleP4mQuyEpDFOdSS1LkzSLJNhsVJzjTM7BvTDPy+zS8L+UbJMkIHKc5YXPwNzpePBAfNWfyygcgzJAoGp8B2IwdgACQAWQATX5TRlCnsfWUSOBzmypt5nyy0SZa5Idmj1d4mGfemh2DnGo2AOVtI2qRaSa4RXGJJ+odMEeGebYqsud
+NziHK02iOfs47XCpxxUmi0nOJp2g8Lt/47LtiQXJS2l5eG+JXFS5L2c8lnWdivutMOOxjh8ezQiS7meQy2V2py0Wqug/LxAgWdZ6F0qyvWUUqhU6rxVqOrJR1qXer6NrcgGbq+blulOmg8kFaUTfFT6GX11lbpBpIE3VZG0b1fGjWQM1aZfSTpSdd10FvjdA1VkjY0NlVLMwQtv6fIcBJbGp+6tgds7cACG2Hcdp28Gpxxjkfk9lEeJ6LZzz1uje
 
-4iUf345vRTE2pgwvEoqSAkrNPxrnqsiBsVIDqAxOoqc6EgeTnDGtgHgN1JTSirI9JUFRXrvUCJ9OMeoDTuk9FaDkPoy5AxfktBBEMPR/WoQDOMfpJBUwRnGMMkpkbRkOpAdGyZbbxwgLjfG1dSiyTLBIXA+wKbVnhmgfyMx1702mL5cSnZzKX2/gHX8/NubcEokY0cc4OALmDKSCa0JEiGM3JLYImtoIdzlg9RW15kLGzEqUdWL4mbazxBCJ4TRH
+kXvU+ORL31Umn5vyLX/IkQCrRRIvCuBZRm5ZmaoFZozeCHIOZPTRHANg5Z/5oG+rMPBsxJ4lGuFNOeJQCHEKdjtGmhweCxwpD8eOf0SE/TIWAChYB5Iij2HQwkPQ9gm1+B3QhpDgTsOYdoHaQ4Th0x4YCRIwcJH2VOAicSSl/xxy6KIqaHD5IfHiKJf8FJhweyYT9ThCRjKAXEoSHggiSTaJ+ro7QPDLZIkOIpI4ZifryTjpbUc24rYwmeI4/BEj
 
-4GyAlIhOEEWQWzcfBYS3i0wEWDoIzCLsUnYW2u/OxX8kRrkPmfbCOJXgBy2CffYkC6o/FjiUMRiceIGBToJRJUSrTl2LvJNpRdZIlx8TpI65c652Qbt02uldRlyM3lZVuyx26wU7iULRRRNwOSEFASwowABazh9C1WODAVowwUr0FZAADXGFsqSa86ak2mYVDYv5cTHBeccI+rwwmH22oCJqmwwllRjB+Mkbxxg8AnHGAaoJgFInXNsE+3txgTXK
+KRKTsc7eIqkXiKPMfJZ2yIEzO2dqYrRrCxHOOJDcLoQSvjCMoYBK27xuGaNCeQv68QzY/FuMSESBiFGFIsatD4/xvi3HsRk2YbCOHVKJJ8F4CYugiS8c09uuSNIH2hJ4oRFTxHmOqeOYpcIzijlOEIsRFjY77CUkSeEtDgndJKL0qpTtLipOMf8S44yBK3H/KcNatC1oFPmX0hSgEuigXJJAlE8SfECS6OJH4diBEmJuW8s5xwzJ0PJJSTZEiFwR
 
-oOBs81AHYn+NoI4nxfyfFqvY3acY4HNkEe0m0SDnoQFQd8eIGCsF3VwRSgh5A3oamIdqL65DIZmlYZacGdp6G8EYQgChLCLS+lhpw5RqAUWlF4RGWAKNSXCMxmgDMWYcwIDzP04sxN5gGUUZFaVqjabNh4AzMGOjuDHB2Dwe+HxEgbgbFOUc3B6pmMFpY4Wb8CRbAuBLXczj5lwQbGeDxV5lZtP8S4mVQTvwiztUHTihs2lm1iYeeJDZrY3hQhhN
+IuAo7c1yHGZJ0VC+psKGEIsWQkUcC5FLbjoV0yFBLoVjnofC7xswlnWPHF894GiIWYqcdimFNLGHNOqYpD2PB9hjh4IKuJxywCnMpfTBMxwg68skZHAVMdynsrCQSjpRwFEHDSTcrZ1SI7UOjqyjFPSslnKtkiYcOq6UlH1Yqo1sc2WmqxQk/EIpxxMrHC8/59KFWGsFca8VkqAUImdibIF3r5UeJ4biOxY4jkUoBXkmJVtRymSOXqp24kYRWyfo
 
-2aTnYYXjmhYOmw2pH32HC0++zxjIqdpsTF2Lji4oRQS2pYB6ncWTgJNOrSdVl2zr0rp/aa6qSHXnQmulJLDKriO0o1kJlmQ3s5GZbc4kLK7n5VZFR9DdCkqQAAMilW0FBWQAHFNA1CEGwHYMAtmEAPQgNgNzcpBCIHIJAgISYfm0CuWq401xvxFE0H5jyT7aBeYm2ExIIT7Cqs/EGwYyRYuXDcX4SQPhbX/gtIBqB7G/smnBmxVxIN7WpCS4VTKU
+0kJqrKmupJbcARPLM10KErmmJ+ag1mtdeOLYSSUTgLlZmpI3wSQjI2Sak59aAX7Ocs7MySkxVbPkrtDSR8CS/NeYWhZP1nDyXuccOEIrRVNPHficBYLzLUKJHM+dHCl2WNjTYzp5aJFdp2B8eEPRyVHr+ieoctCRyuQKVu8BIp2kRzsTyxNsxn1qXOOJC9+Kk0eKJAiY+7wxUAZKEBoFcISTEnkT6op0IFwxM9vsFVzqOXmOfTwg4AJtyjPA4QhS
 
-HxAQDRmj9KcHyyoy9FlRCtSWjIT9ZhUNeXCuBlCoVtCTqip4+K9hkquHBkRnwxVAi0aygxqIjVeMtUEwLtIvVcjrkSspsammOUwQWu0R5CpcGHVOtKC6zgYIDgeo4BYqxvAfhhNhIkWVAUnEIBjZbOMYaLwRpzXOyA0bAmQO/I6x1fBTYpqCxANNwbFlgGWT3QKXpVD7BgJoGAZ6tn7AANIzjOQlXobBa37H5NuF9FRsw6PIAVBsJMtjjCxT8I4E
+IzuFHwXOOJ1faXWLq4S28NyzaW3OQ8OcyD9/2PsIyxk2O4NKxM3RIpIXjnjdrGfBsAz6RJ0PMi+j94mwEkjMnO/DarmMJBEhAtZ6LbmfHeOphN/GdPrKBcJQkYnXXGd2RpgtWmi0Dq+EJD2dNdwqbs2poFZnnMLso4MvhLLHU2osfZ0zmnGMEYBSKscMSqRNs0VuyLfnosSv7ZRk2GkO0xLGal3zjm61Mco5A7Da111oaM0V/zMXtOUa+Wsmx6iw
 
-1v5H3cxAX5O0sVwdOHib2JJzhRYbJCoavAXjNveLWkklbQUXCKaUNFi1UArUdZVJoIsBvQbI/AoTLJmNUro7Rz9vnsH3XlEdwhbL2Ocq45Q6GfHBWjcGTaETPKxMNg4ZJmV0mFVNS/vJxMIisbKckbFmRJNHK9ENb9ydR0rVLTJPY3q/W7PcCaEtyAVn7NCzdR8daXwA1S3XSG8U8tPGRtiyF3RcbEhudhCSCJRt86+OiebDNCyraJNtpkjCBbcJ
+s1ZM+lpz9WXOUf2GtEjB9cO6tUx14rsn5JcrhZenzo26uZdK5Qgkr6TjGZS+JnasHVL/Dxb2+bsXfUpK20kUT6GLFMp4Tc1DcHzMHaQzCHaGkI62YBSiX4btiSpr+SV/btqEgFIpPG7zALALPA+OAr5+Sut7Ya79uxXyTjvtO/JAHPRgJytk3ykZHwhw01EukrdXyqQEjUkCwCeHuuBd+/8Zlyrhuur6zbAk4kaYyZu79/hk6PhHye0jlxBJKT2V
 
-FtdsHOihwxoB32FHSpG0GrFKm3sCBYKpd1RPk0DJebRdewDkSD81xwEfmosHOIb9DgnA+L+Nzt8Y7C/59ME3+xDgM7/Xvb+J8nZxBXIkUFHUXlHxg+r23muslTbXN7rbrMwlv3Gh7kaiIaqvBOCcZtZJrga+mG7XY03w9zaj4tp2nsvmflRwSMJ5UbXp/tsb0PM2I/zej9jkont+zNv9ztMvxxK8lpD6fMPs3I8LZj8HT2Q34UvPOAcG1+wu+Z7K
+2t8eju3g2+tEiKgEETEe3IJAKhMHtZmi6y+zqka0PaAj/RR37MqDh0wPm8arGOXRq5FHerX4XqkxJFD0E4Ina3G52qcGJ4DZ2nat0pK4R9s3guVwtsAfKFxao9oT/HZyDH/gOEYgz6TjdpJfR8Q5QPfUR699H3332YcB904NgXXqvuZqg+ovPymodi51wIjxe4wOW5qW5yB9lzI9szz1nXuJzLgOeMVrdu1/axybQfOEGXy8WJ2JAy13uo7hYna+
 
-jVbalwySXGm43sAnsIv69Im5tcJG7Uz+r7Cm1vVD4ihFv8EDw+sV4kRGSeb5xlw27jiL+XRJvgHFJJWz4bzV8rXeOcDav4oKBwY0aeQeGeWu3s3u3UPuY0fsRITsV8Nwku18eIFwiI++8u5U20Q2iap8lSrMCBZU5wiK204IX+Ly0+YBVe2EzWju64DOTOvef4P+EGwKdqMYoKPswwGBAubUb864YC2wK4lEsIhBxe5ulaa4RwABPB0wzWcIO+X4
+g4IlzKTsPQF7JB7VJRd55cb9uJ9gwL48vxFq+Hnd/CQI8B2+rhlqXyc4mGDAhNhEOENqTJCD6BLCAmGd/mAP+4CyIQn9Wz4ChBQBcj6D6BqA/gwxYK6i4JTQTqH7r6FLySb5n47AX4PrX7cxrB8zYToDGhfgKzGjjAowABayg4wDQvQgw9AQgNQQgxo6MxBvQWsM0OsgQ/Y5ABsrYg0kI+IRIRwgc2qLudsmwjsoyayC4YksI10pQOkekf4fqUcA
 
-40o0HwFm0w62FwVwew22pE0GshmEuI+yoSzuG0Fwr26hEGjuH4yujuqO40+hOEuI4eG0HwMYza3s4ISaGEV8H4ZucIvUH+JwDhzW4IZW7wtUJBHhDOBeWKXwiKHhpwPU0cgeT+duBhoRBw4RbhuKnhMRNijueItqCa98lawRThYRrhkRXuXh0wns0c+uPUjqlaMIcGZRGRLhER7h1RseuuvsdU/RJRneVB3evB7RWRVRuR1eBK3sWOp8bmRRv4bR
+abWIcmIYcvAkiViIy6ayeEAtIvoz8Xc/k6cEAmc2cZhec4UhcRhJccUCUFc1oBoRoNcvcVoycnoDoLc+UbhHIzhpUfcY0lUTYI8rYtUMYsADUaI08rUuCZCEAC8CAhY28y8pQ5YxAlYEguAlQG8xAw8SRgCncesEIeSFqayCiV858aAIy5Rq464HYQ43wbwgEB8ZYr890786CX8r0v8n0ACaIZMICe8VMkC22vwdwAB8CvRyC7Mj0KE/+pQmC2CX
 
-zh4xXRkxPezEpEh8RIBwqGoBqRweoxyxlRqx0R1epB64lwTwMGcG0cSxFRnRORpxIej80IpEvqxeeu5qwx+a5RmRxxjxNRtEWKnB0cn4/wv4Io9idxfxDxURgJYAOIbyqOdqYK1aSQIo0JHR2RcJTsOIW2vqlEhw/Yk+Xx+x4BNBvxWJExTxGEOIh8s2/Y+u7B+ulSmJKxAJuJCQvU+KsIZSJIrWbJ/xOJWuBIuK+uYSR8taNUexdSz+hx9x2J3R
+0/uRCnC42CQTaLwzuJGdOA6gIOwe4rW5O0OreEWC4NwMuqWayo4IODS12++dmZxn2yelCJsJmBio4ZkNmZeKupxH2FxEiHs+Wak6yrO9xAKuIfxka7aQilagI+ew+PxviVIPwbsciY6Zyu4SInwqkVsZODGxxlOcmy6/w/KQ4q2Oxvq1KtuhIriRubORJTs3aPyVqU+zScQ/W06RIo4peLehJJ6g2hI0IoeFJJQcQnwvC1qvJx6yOTaRIpwbwG6p
 
-EBv4W2lwrM0ppwDOgpsJSp8u7hqp0ccG9UmpiQ7aYicAgQtYIg4QYOYMhA+ghYASowlpzA1p3AjIQgsspsXaTSPaxA6cIkaqqEIRRxOpax0wiJKplEhpGpGG7Em6JQKWDkzAhoowGUFAmgZyQg9APArQCA9AM4AAih0DsNgMwPyB0FVlMiug8sVJcW1J8AzqRJbr1OuKBsVE8Fioni8q8CKHan/BCi9tsNoDGNsESKRIClNNhuikhtcJYVVFtjGN
+2YpXw2qrJsmJ6pIFIJwqkyIzxYAypEpap9JJ6SIscwJvw+W2u+pf2hpsexpE2AOEcHiPJWy7J4CgIcKGxY29pLijpTyLpZyMikCAigkLOV+BJ0pvpFwTpzyBeZyCmO0hyieQ+3x/uJ62aAuzpUJZy4kPCWG+uSuUpT6Dp0Z/p2ZBKraxkY4eJfuP2DJSIu4tSR+GaGJhIxw24AIPORZAmLoJITO44l0YeBKjy7Z9kraTS6p7cnwHsY4r6Iu8qu48
 
-7s2icHthRgdqdPgigvsNgP2JoMcAxpdngsgixmqLdiQg2Jxh9l6LxhufxhNs1tjmSsJtyjeV9qUD9tKl1vKvwjKqjHGCqkpqQpqtqmzgMgFJpqTAAGJw56YYSmqGaaKMy6IAbOaqEY7BiOp2YObNh7wkgM4Lkk5Bpk5emhqU4BZJII7BZPgBJ05hbO79hgos6poxIJY842y5rkkC5OxC5knUFETDmjkHw771TdT1qp7zlglLkkFBFFrsQAQ+l8R+
+IOapKl+tZWeJ64+xS/O02P0+q8Ik6zwqSRpYJgGXCAceWB6teFISku0oZl53ZOm0IQp+mGemaVIKi8Itp+JI+J6W2zw/4RKHGmaB8sc24AiYKhmaxkIWO3ObaUKsS8phkNZD5lG3w+xvwBIcF6qvwNutJdxFOziikBSAiwua22Fp+SGipKFLxgIeSbZsZepSyOFgIeFE59JiSlWVwIynxWFu5CQAifiTWzek5ZsSkSIO+q58qMSEuw6W4KZ1FDJz
 
-kBm4ZUXtKDrqTDpgVWTyidITrqYCBDKLpqbs4YDjK2Szp3I1mFyzLuQkUJkrINipYQC9BmCtA7CjCYDxD6DOAiz8jMDDCEACjxD7pVlWXNxfqPLyH/AdQBwsxkjwbnx1mnwvCVLDa9QM6gr/AIYCYGK/olGgp1T/DaFy7LYAKrbNojQBzRxbA7Q/AOKwL7Trm6TkpPS8gIC1pbDxCHmMptUqisbnkcqkLfTXlULvmGV0KIaoCPnCqjVPbiZ+BSq1
+yTacIo6z2B2ikOGbWIlPQdiC4tiXSW6He2+h8j26OPpgIIKIZXeLZrqEahi0yTeoJBFxZLiu+VpXCMIeOtwzkkOClJ6e6uWCilp0+jJ+wVIBusGbFJ5CGSBOW05lsBW4mLwNmKpTax5zlPZAV8VwVtyVqI6ruXmqZdZ/lcVF5iVPZVsKI3G1Gi+a5JxJV55QV95WyJ6RiF27ZwpdVfJsVjVCVVp/JLywy5GXVkZWVZV/VXCuIBicIDFRV65PVgVf
 
-jcINg/myZ/nKoKag5qpiISKqZtJQ7zBnqwXLUqL6bqIthIWWoeQQgByLmlU45cyurBjfJDhPWeqOYfxVRzFdZbiBpeZsW+bkVKyBbaUPg0UxrLj0W3VPA1FxYxZg2cSsUkXsWg0Oz5o8UOF5X1SsyFWtYlX1qVUXB7xgJ1VEhDFxzyXelJy+mpz+l9qI2DIaW5xjJjqaX6WmUST6QzqTKM2QALoWW815TWXzq2UJYOVJkVCPxNApRVCSDHDdBQBD
+V4Wz6a6iWUiRxP5C12VzVLlXw24SQik4k85IlY1TV5VFm/4wqVFJ1pVZ17lZsXqBiWGS1flW141IV2+XwX1IyPJIlZkCiemMqXxnG3aaSCIIJ4Zm1Li0ycIAIL1W6r6iZEc8Jc19VE2MNF08NEiVIJIckDRgcUVGVOmAiwSmNOVBOUCw4NshVr1fOayhOEJ85n6w4GkIyRwnVtNKK2GvG91NMAcbNikeO35PxJ6u0KiU1XZzN/NS2HN6p/S1Nylt
 
-wRTdBjwIBGB5Y7A1DdWAgGbVkRW1nNQIgjRrhl7jQOovLtnNREjPK1plZVTJ73w5UTZHxz5IhVT1Vb6vDTkVXPCbQW0RG/i9Rrm0iUZ9XoA8g7l7kHmngXa9VbmnmsofRDWXkjWvljU0ItUnT3m0gQazXp3zXfYSZfn/a/lA4AVbWqppi7UgUmXgVlCQWORjwnXUzwV62XVLLIUoxPAkiIpuYYWoCzRvUCx45erYjb4L59hEUA0o1A3hog2UUGWV
+xallCXysKR871fl8tnmitqlvOSWVVK56BRNgGWtkCOttaW6+t1upaRtEqN+bocAn+D+s8z+r+gBp4H+oY3+aAv+cxkAgBzIIBYBMg/YkB2C+QU0DsZsCt8WutiBkiiZ1tZKe+dtmBGEB4AMQgWwRgewAA4poArGcMwQsBIC/tEKsIbJsG8E7OAg0t7pWoKsIbxFNU7M5KgfchrgzK2LIa3H+IcJInTDsN8JpLOZfG6FZKobZGgGcE7OSMtocRSbo
 
-AQ2hY6zu1PCkqASs5qXxaz1Zq86cX8VyGY3fHByu0nzu2YZ4jgje2lpfAjlXAB0xhB2mlyV8VxaKXNK9oZyxZc3STjqs16VtJ/081LqxYC31xgPhX1ai1rpc7eSd1bpOUOTHDEBGD0C9BCCYBbJhVlD6DRBnYNYbA2oP1PDfXbTaHF5W2bAQi/rkTDZuacFw3jY2Y+24YBwh1oCkr8pHY8gcEcE9VMbh3QADXJ0cZp3cYSCSCSgaCBB8ougsg51S
+R5Pod4anMXBIPyAmFvdcBYQXK9NYbFBqOXElA4dXCVBIJINKBoIENaF3B4XIRGIVCnL4RaP4YGBVEPFvH+DVGPOERPO/eNF/Ugj5IUZUTlmMaUGfFtOGOSNUUdLURCF6nPnQs/P0RTH+EMaJHpUcC0XdAgOgx/JEfKC1C7Z0T/I+D0TEeBBMXkWzKgjMVeB1PmAkT1DvFXMEIkegMQMQCKmtMQDmv+MQESBSMQFsMQBSAgF8pI0iMSLiArvEOMAu
 
-YblzW3lF2LW/bflIzrXl3qNKKnV81WhI68yOqfAD3e7YX45LT0QQhfBqHL0ayr3BL1T1X2N/Wk7wOkWlCAW2lkXz1eJAXJqRKxa72ePg77WxZkIRPoAXDXBdiVoFG4AhCp7EB22XDYDjD8jED8jXBmT8iqFdgzaJB8ruDNgOzuYIlU1OWN24CDAQAS3boSCjCECYAICjAJRNC5C60XV4MENbwXxbZOEnzggkjW7ezUOOojmm2gKPx7yHDO3Yj2Mr
+Lfe4B2BQo/fSvbSvGkYNLoZrGhFgRnRUHUEIHUEjF0PQPoARMXWxGXcoBXVwRCN8AJOcYwvPnkuJE3TJNCDPezXkjtCJITqON7J4eGF0DUp5UOCCkiHYioTZNwDPQSEONuRRkvYnG3KvQfRnNvQmLvRFIqJk9ALYcfbqClE4efegJfdgNffY53EVPfb3eowIEVC/X6G/QPB/bkd/aPHVH/X+AmAA5vEEbQ43KA6gD8GsrAqfMuBUagCcHAzfB2Nb
 
-bsNw3Eqh0bm8P8MxiCMPTXaiPsriNcqSPoDSPYCyOENvbZ2Cpdb8qqPjUQCfkGNaMyaA7/l6NGoGNqVhAeQ1QiwX7OrvU8wiyWNj1Ib9jrjriVpqwr10U6ytZwiEpOWebeaZreOV2BMU7+PU7V3MUhPI1hPAUqagVqVROgUQBwgICO7EA8DYCURxOaA8DECaCaAM6aAIAb7xBZMsnYDYCcv8jnAdUlMEBlOoQVPxBVMabECyKkyVkNPIMVDDBnIw
+pAqJPdn0cAug2AhAl8tho3QeK0fg+0bMUQymDPE/mQ/eBQ8+Gc+MZBJMQASgoc4w62PEZw8A/PIaCwxUNcLgIKpoDloSJoOMOMJSMQH88cF0GrDcHQtTJoJoAEuMERUXUyCoxHbuWIvEJoykavBkQrBAPo+nTdADJDDUEYEkNLPoBQNLIkAAELxD6DjDozUt7B3jOAACyNQ1jFQEENTkARsYTv6t5ZaLFgunjskGkLoLwzFHsrNJ8MhPs8hDRhuK
 
-DdCYCYBjzYC4P2l9ORVIa4imGLa2FpWrlJVG0bQQbrhfA1Sgook1QLPjiItlU4aLOcPTVh0J1UpbOTCx0MpCPus3ZiP3ajWnPnPyOTW5X53HMZ1sLqNwxPOl06NvMfnyzw5L3fPmQ9TB3D3GJoBD0Asj04VghlbdQJP/N+Iwtaz0UiybRuPIuA0Ng+M7XuL+YL0YsJwI0734uuLc6EsQ6GOksORgqaAQK0oIA8s/yJD8h7yUsrlv5oLLmZO4B7Df
+IjlKTE9cT09BkJNKItWjTqTK9jcRUBTphOcPLEAYUe9kUBTpcdhJ9pTaUPcfhrhBrKc9TXhzrnoLTdcTrrYg8nTuroR48fTz8URpDzzzDrzbDWj6RQ0HLAzORX9mE00JdnYswPMBRoCDe4+CI0hkAUDc4GDObDA0zNRJ0HYNwCOGiz8t0b8aCRz5zb0lzOCiCkbpQaDoCmDqOgqhbTMdzpQPI0xSEHRrYCxVzMBdZKxLC0V2eirpSMyzeWyBIkiW
 
-DFP0ilOH0Ik0Tivv2HVyJ5b1OIOJmNPoAGSJDMCZNVDHAwXdO3K9PKAXOQDbxXwJWUTQhAZjmnzUNrRVVHyE4FL/BD5jaCru5xjLNghdZrNcNusnketbM7NXbCP+sHOBvp3BtunPZTU3MKMioF1qNJsaMl08LaOvOkq4Ipuc3GPLj+pZvPWoAfgguOYii1QREPUOO0UVs6zDb64sfuPEUEv1vou+OYvNsBOCdtvBOGOhNdvk66i11tL9sVDXCaD8
+raWGmpCmL/tQBQd4BodUBU9zbyRTT2oUA1LqR5YygvbkAWQxAJ7ioZ7F77oR7IweMbAFAVkuArDB7GAioT7+Mb7H7+RkAmC+AMAyg0DqAH8+LvMhjEgCsMMMA2AlQxobI6MhAFAKMrQLQpErLfEkMdQUELELB6A3L3EIhCk7d2r/KHisaorHSLoGu4p/43wJKwTD9TsxIxIclNlpQarahlwVCSkiNANNmCc+rT9fkacAoJruc14+ceTRcMU6A1rx
 
-jHCTs8BDsM7YA7DEAfjZNwjxCpNoIIiaCKc65NAdXDCaBCuejlObsSsQVSvQ64AHr7tJbdxHsQBwAABqeWvQkg+wNQM4mr+Dd7/TxUvwv6KpK5eFiILHvyfqV+2wFwBIfsJwDrkALDwYMCjrM5vA4HTV6zWdh2wjfDsH3rjGuzCH+zd2w1RzlCqHcj6H4bKjOH9zjzqYzzAOSqOm+jKs5HN1lSWwA9za9HzY0C5U3wew0LjjsLwSiInBpbHm/1KL
+TlczzZ9Drr93rtTLr8r7cq9nrZUADgRGY/rv90kKaxzH4pzVDTDXUnzwzUbOjuAgw2RnTibbYybc0qbu8OIXwUGzsz8ebs0cI8zCD4Y4N5IqyEDWE+zBDQ7koXRjbL4LbkAbbgxneyzIo4O1Dtz9nfbDztbTz8xu7Sx4746ce7Hp+Sep2fHQEakDRQn9ka7zmEAAdwBBgwdEBu797zIR7N7jgHk97V7fXd7uXh7pAUAP7L7f7g337z7r7IQ/7GC3
 
-3b/HIOVd6qc9wn2LG3QT29S9knnkqLMnRLddnK0TEAtLp8/wO5CATQ2A+wmgnLNLVU/IdUIQnYmgtad3Nw/Ia4qDuAOtYMa7QZtJtn27NTE8LnrY4AHEjkcAcAxoAS3A9Y0AaImQFQRA6KqwDAhACAFAUkcdvr0HPI/IpPZPYoF3Ig7Kgw+4+gxorV7rkdu5iQ+5FP2AVPWoNPGQBPPrFXfrVXF5kA7PiwnPtPUFEjj2uHlPIv2QXPdPWHSj01ed
+IIHYHEHadUHhLFQzgQg6MrQIwCsBENQbIDQlQBEKMxwhA1LMMygvQKn2MhHLX5YprRspsQ+tuMC/eyVNHEcLoaaTyqaFyhbPds00dyZXHkAPHe7FwvZSQqtklInXkGTEnG9Unpr5rcnVrRTiUJT7D9rtcBn7rzcchunhP3c+PbTPrHTX9JnPTZn/TSYxDVnmYsRLzi3/U2jVYdQLnCbU07ndR80Iz7bGuu4XJcDiDWk+0xb8DpbEIJISQfW9kuDN
 
-hQ0v1PtP9PL5kbhdQvHPsvtPCUxdcbKvwvavGQGURHXXxvuvQwYvnAUAUFeM+oTUS2qvovGQUFdvhohARgZqh0rvevGQVQWAhkmPPMcWCA/IKdOvMvNvGQiP3NxlUi/vsf+gvQ5lkDjc9ypQJvbv+gwyVQPTuCbP1vcvUFmqBvnoCOVo2ASwBoZyYIRwXs2sbhSQNwk3KvzANfHI+AU8i4tUU2AB20cIY50c2PRgbABgyPQ4BAnp2II5NqH8Dlyf
+bDDftZrCXH0o7+7AHEAqXsv6XXyEOIo2XCCbz/t+XKvS3ixqLWeE7sm7JIodX4PJQ0PVmtFydkN67LXm77X27xAYd0BWv2UvXp7A3o3X717If57YfPX43k38377M3xAcf03YfQHK3+ba3YAab2BAMJsZwSM+ADQ7QbIUA9AbAzApE1YrQZBuAmgpATQnLEgxHaIRsikkinwC+Smr2tCorjsCi755kCmUhLHvdIov3diHpe1JiXd3Hoce7JsLiiWg
 
-cvBvumBjDz8sFPMoJAXvPvhb2P2/xAxoCAcA1qB/pAJAE8bAUrafuAmgwQe9QiF/x5z0PcUkHIDkyUEoAAFHiLcLl//z/7UAlexwAAJSWgEoCAZQI6UpRf9cAv/MJMALBR0heAiAkAeAKX459sgGvFkObygCjheuAycROXxUhMA+kqAHuFkDv4P93SpAT0oCGwDvpaB9AuMBwBUzMCvGkAYQFAEAjNgPSnAiAPg1IAshSAM4dgWgH4GAghBIg2/v
+9K2GiM/kAehiPpPRrqPuTVhyPinWP9hdr+nFPWn7hOnLoen5TEAX4zAVk/clPfgn9QzXTIRpnERDPJz0RzPuY4bbPDnVYTGHG1c689tYKbdbum0GLtIsMNwMXvGEmaQMpeCzRBmtCJBe4q2MXR5qr2/gXMNeTbU3jr3WZC8tmpONssb3vb9t6Gg7OtsO2K7W8TitvY0mPzyQT91Ediafi1QX6xxI4O0Ffv3ia7dYvegdH3iHT95ddo+UQcbsN1D6
 
-fw8j8Cl+dgPMtgByCGg2BcAK/jfzYFyDH+jkFQYQEYBVAJ++AKfg2HbpGNgg+g6zAwKEAMgDABfW5B205xScBB2YAwIaHSBWCeYPmTiNxAMj6DDBxgxSD5HABaJxE+oG0iomh6tggAA=
+B83QQ3SPt10kETc5uKfWQa2CvbJ8Fu97NPqBwz5PRIOv0TbhIGIJQB9AygJoO0C/yN90AtjZ7psBuBmwGyw9EZNeSi4QB7YlsJ2M8CeyOoTgPqCAMD0pixNeOCPJOFv334mFsmO9GTpYX3oRClO2PO7vqDU61xKm1TW+nU3la6su4J/TTpAF9bU8f6tPD/o/0GZJdP2YQRaAonY5wDUAscELjLwnifE3gY4NZuTGIFAQRkayccErzaIFdVeIba5v
+
+F3IZ4DQ2fbGhmoLy4DtwOcXfUH/3vaOE7O6ATQH1lojYA9gCAQ4NKCHxigzIewC8LgGhCtBaIo4bOLXwBDXAEAIqZRgQFUZTRGmAeT3qkWja6ElYeLCATnyMbOBiAbIQWOMCBTVghYygEYLnRqDVgYAiQGoOjESDWDHuIYEjrxBRDaALh/CIFODhtiysHgIhE4AJBNgiobgXOG4Lq0CF/hdwkiTtGpBgxoZghe7PlKKitgvAVWdKPVpvzE4cht+Z
+
+haTl/Fk57916B/I+okNPplN1OrTPIe6G04hNUAJPNkWTzYi397+ARZ/sZyKFhE6ewbRnt/2zC/9bOEbT9s8Mc7EFueL/NzmAM84QCBAozMkg9gd6Yii2m0fNtOQaG3xoQtdKJm4OrZ9CLe9bboprwIG69KY+vU4IPUkg3MTeyXFrub2oGFdAOdAsdjbzK70kDE/dCBKBSpFxIWqdIwEAyMVzCVWEnvVrlu1EH+892BAmPsewUFh95Bt7GQaWKUGa
+
+CE+lY2br+y0Gp9luuglXgYM+ESBEgxBZgIMHBHEFTWYAsoPoHLoIilo1SBEEhifJWIdovfPjh8BGTQg5SfCcBCP0QY0j4moQ9JuEL5GRDsmu/OIXuISFH9cenrNId/lXqutwwV/EUV6wbiP8jOwRUoAG16bmd2mgDF/qWNGZ5JaEurQLmgA9hOiOw+wd1Ex1tH+iMG+vGmH2Ql43RMB/QiziQyGGQAcBDbUYShLhFhjP2lArAdqMXhh9FhnDCAE9
+
+jwBdBNAgqdYZcESDjBLhXQcRggEuFBJFIwLM4EIy2C4BrgaRM4NgBuG+g1G6LJ4diyGi4B3hWfAxkYPQBKxxgRgfPtgEhgERNAcAegA0B4DowkYCAalhQFIhQA3hBHZNnCLsGIj+6dibcLtF+A8IiKdMXvguHb50IgUnmFDAYnXGDg9gumIEmRnnbj05+20fuolmqFiUaYjSbcVKKR57j+QjE17PEEPGWt4hh/W1meOv4E8ZR14qUZf1J65CHxpQ
+
+AoS/2fivi1RSEpnlqJs4ETJhWEYSboU0BGjJoP0PnrNAF4gNFoQEc4D0BDGID7R8TQtnm2QGuSc0FwE2L0IOaITvRiXe9pBM2bNSWcokcgWH1wnDTaBVvOMQwITFTs6E7kgZJ5POqAYfghKaAYFNEwCDjiQgtrqAV97FjFBwfasVHzKnh9pB102sY+xUEtibpGgp6Q2Juk6DVu+gj4dB3QCssoo+galjUGICHA4ACiJGArCFhsgPIhwZwKRFhHN9
+
+K6iIgSDTFRnKUDEBItfu4KeA7SJcDkyyTEmdguS/wgqF0McH0Qwhxy/gyHttFNjkhu01E7bJSFtEb8whMoo1pFMpExT8mcUgUaeNU7CjyeYou+hf2ETiiPW1/YgGwFEGKi/WKowNu+NbCDDrOYbHUf/yxYc8MivE4ATz1qmmiGpkAoor+hYExJahQhSXvaJ6l90icGuQCINNi40DhhuAv+OUO17jTMGCIQfFjJ7azTIxMwx2TGMWmZhliK042ral
+
+JnAQKZSQSWn9CpAJBIE8+ACK6NaCHTYiBYkQZ13DoSDLp/Xe6eGKrG5yLpsfN6erMvZNipuz0ggZ9L0GzFOxv0iAMNAoLUtqw8QJGDCP0k2NRxdjccbJDcmbEu0oKLHOpho5WxkRShC4GpEuhBM3QJIz4ApGxLTkYQmGJbJuOnrIincsjQcpcA0ghSDChrCIZvQPExCLWPM48fFJx4Cy8ebEC8TfSvFZDbxQsrKfkKp4v8aeqokodlNeidNvxi0X
+
+cP7DNnORgJjjejGTg8bvgiBaXLZnsXeDuiEJXopWRqLGGoT1eLszCT7JulzT4F88eYYRI+bETWguAWvggAYSgthQgLWFh2QQAWwEAlwUZJoHiDrDDgfzXgeMD4l3C0W9woSZrKGjTA65kksoMNGGiHAOAhwUgNFI7kVBbB44vjjsiuBZjBckCEea8FoUCVqEsPIHlkNNi6k26oqSeTwlXmoAZ6okEkriC0KQ5d5YUhTvuO3rcz5OxhE8QlMvnnir
+
+6l40nqlOyHNMkpp/Z+U/zlndN35/9D8WUO66jMQUuIM2dNItnXxQudQxSPZAtIQSIFevKBbBjMj2y8Jn/SzpqNiJoSfRTbYqaGIoF+zCGJUpYQQKIkAxiFHwWiNSnEY8A+wewbAFSDEA8BQW16ehegIkzYBPMbC+gQHkEnNd9RVYJAHwpSIAwoAZwZQJoC2Cst2gygJWIQFZbowCQpEdoL0A4BGAjA2st0MOMRkONjJErCONOVlJQIEBWI5ujsBc
+
+ShoXYjeWjHBLlaSikRMIPTN8BjyL0aZaAcVjIh2A7VWwrMncezIPk8BFGxC1oLYsx58zHF7zQWS4SfniyievdaUWfx8JeKxROUjMHlPf6BKEFX/JBXERwU3ShlGRc9jrONGgDCOZo8SYL1/Adko4HaWofUSAWUxD4zuMevBLwYOzoxavEYagrD7uz9e9SHZDNIwXFLZhEAEdvkpDnMJZMTy58q8tfJPovlQYsMqLnzHe9TpRY8QTdLLF3TE+uq7O
+
+cXObHvSCBr0o1aXPFVtivptcn6fwvoCSAFYygAiNWDaAoRNA/Qa4NgBGDXAhAFESoIcFhG6x2ClAHuabEJwtp4QZkQ6oWw8Hitg8RwV5YmV3DEzTYHiD7J3kAo7kIePktAP3RtjApN8Cqv5cvVZHIq16ViiKS8hRDgreZZcQUcf1RVwqRZkojxc/QbUP9P5vir+piuKHYqmoiCzCaz3vZEqhoToUla7O84wMIYMIMBVMw6k5qupSAmJYxzNyDIMB
+
+HKjJa2FyWjS+VSSgMVsz0qCo3B6CggZgqjGq8JVJXeMdKvYo1IpxCiVSIGi3RrQB8a0f4FvJGoSIX0h62hHmnRJ2ZnIuICOJPjtJTsPKBif4N5XcZO9Ti2Ob6ijQUoTJPM/5JmZmpeKHr/q5uW2iPgmxR4qQyGcmtjTxx5JaFwNNYkcAUVmLj8tlSyYKguEO5ExliccDsk2m81vclwfvGiUJoRl4K6iRoiqtuQAREmnWBSvqgPiUg6E8PcJD8A8R
+
+rJIQupVGoSWqRojIQ+yUNNBonSxxuBQ4KDQiX9zVJz00TNSBGrIp8UfkgILMl9mNzKVS03FTCsrWzwogUMX6WWvSXZK/izi3QyTQSkYTOQWs5JD9eYjiD/l4QGMyXH+r4oRoR0OlCDU5W42BaNCNJWHvwgMpnIZGGM7lJDR+JxBJWnsLBm8tryzkZEcS6TJlv9xxBSkWhWhGFvs3VIEcpiCyWlRA1hzrSOwOFICSplskHqrWikO1q7IyqzYRwR7B
+
+2Q62ulZ6OSUySii0r0kTJwkEkJlyxrxbU1pknmgFp+i5qByEcLbK6KtJxBV0YKWOHCFI3TaFI7wGknnzU16k4gTZXHCKhi2la6yyYwCJcAI3xa1F4LQVGUmFr+5+6XyNLUCgy3hZst3A5koBHSpxa1tyIp5GJEjUBl4tAIQkNHA0hBT8K4O2YP3Xh3at70qG60nIhJzPBZUXGkfP3TMjsbng5kbQkqT5wbZ1IbuBSv3UwrkyO+0c3irMDiAooVE7
+
+6unQJA44kgAc8lUbcSjRGRx8tClOmfZEDh6KTNaO0SkHDJr3lZMdMvzCKFgr2a/J4pJSOZGkqQV6SiuyNViRjnmITJYFazGZSnavd5ePuQzFshMnsbaKdSSUgrvOSjgQ8htbHbmo0idohKsWkfCmuhT2QtytVZpLmtkRE4IKTW1HSUF91pqA9QFP6MHsaIUgw935T3o7S9p35MJrAN2u/ido30fapAP/OBHVUdcd2Wc4OT9Cj0EiY9qG+PfmqT29
+
+oswoy/6BUCBggwwYEMaGHDARgERkYaMIATsoe7ah8Y44/4L6Qsr2QWUcpM5djN4i8JJE1GH4H5gCS2iSRkCASAOWnSeY4yrYD5agDb7RwFEQ4IkBJpywWLdx5azmVWuPkY8a1NrC+dCqvmOtG1mQ5tQ/NhXtqfFT4gFS+KxVBtCp2S/CWUvDHDrdChAaqdwBNEUqDZFoxaH2W3kH6zZvwJlX+EuDEpZNhbD0UNKwXIKeVlDG6fyogQ0xhGBwYVSe
+
+tFUByLVQcihLolDkR65Mq+5LFiRnQ01rdYTffbwyP274U5eY5runI1WZyA+D0qQRWJemKh9VqANzukD/jETcI+EIiCRHIiURqItEeiIxE4LPN4IQgDMEBnM394U03JDCmIggDKBcAcATcB8gmZEjDcBMqAw+0NUVzjV+c8ufHwBiD6X21oIIDeAoBYDG9/MCoNWF6AoxBg2ARIMoFGgSLS6XcoyUtF8Rr5PypGQDVjI8EiRJEBmECP+W4xtSQQWQ
+
+5IH8FWTcYLJTpAxW5IOBlpuh1MS8qfsBXhSoh1as+ZCrv3JCYVFQG+aaybUP1X9j+9/RAHRXPjIA+Uj+T4uCXR9RmturGQBNJFjHF1jQ5A5dSSYDTwF7QyBeUYsm3B0l80vtbiswlbqMJKs8YTlxFXTCSlqs0qeUrwUAweAfzJ6uMFaDiNrjNxwWBxKA3XBplPQAhdgGMxcTulmgWOFVORa3C+lDwjFoMoqm4ArGPhnAhABRjoxsA/QNkNWABANB
+
+qw1wGoPgDODowhYY4ZwFADYCwjXDah3liIVHDR0JwZISkSTpsk/aG8zWJLAweJk9B15DZEMszmEYGL+kN5F4Dq38H/LQpZ+4wpnFkbYAeAtRqxQ4oaNxEUhb+jIRKPaMZS21ssrtfLLfH08cVWSvFYOrD7AHcA+HIJfGzJV6zIDXnalZuEFxfUyiUSmZiTiQMQkDeS820Rgc5XYCUFuBv0buqgkEGv0AIXVsevDGnr/ZXKi9X0uoPXqp2zgek+6Q
+
+RzQoYtmInXOyZjgOY5sDeng0XrOlarBD5Yq6XquENpn6x5q01fYZcNzd3D+ATw94ZtVjKKgw0QYJIBhiDB8AMMbZa2GHFSKW+IhUSM4ybRy4Z0oE3vlcHxCPxAcyNcmcTJFSsmp93JveSnCNY1Gr9vIkU+fKSHimmjF9FxbfLcX3zZTd45KR2s/2v9v9Pa3/Tqe/nhjKhv4Wjc0XNNgc3gVp3hquj2RtCBiyS6mB6RAprGsDRh/tbsewPOzcDBSv
+
+Y9hO16+mjj2CtWQsLOMVBii/w7pbgFokHA+wBiK4aC0XKHAQguABANMvoVcSzgjEhAISF6VLT+lnC4E9wt0L4AxJ2feub8LAKHA2QSMKxuEZsGRHxxdXOjruBcEAhgIikGjnPLAo7Agx22YKTPKyEJMDkPwckG2UpCZH0Qk9RxlmmxxoohypQcc5Yr5PTnuRsQ2KXUdrX8z79ziqpq4pSnrmZRmUroz0ZvH+KFZypjtUMe1U/jlmDKwEFaeMwipk
+
+shbfA0+eJDOXXzZ6v/Xiu2O8qf+cCfY6QcONir1TN0ipRUCpCCxnIasVSOMG6VXChQxAbAGIE0CCmtg/Yd9hCwZEJXiA1xvC2XvpQDLBBmp/QGRfAAkxdCcAOAKaBATgHCg0AKyJkC5bSW1gDAQgAgAoDUseRR48tUC36usK2r2AEQBXH6Cnh9ApoScwfM0gMKhTQ1ka0lDGsZBur6l0+XOfqN3cIAw1vGItfGvSwJTnRiUFtYWvZAlrE15/TKdK
+
+DbXRr41yaxLM3On9jrO106+NcqAvyMV81561ADOvDQf9isyANdd2sZBpYnAKANLC6iGhpIHcJ6zdeBug3jQhAIwHUUagw2gb+gBWFgAm5EBlA+bFrggHGCbXAbL1jILVbsPOHe2qN4m/oDvBOHVBuhQs59dhv6A4+CsB7oXCOtE3vre15hm9d9BvMbQ2AVkEaExiDgRkfZjxAb3Eoa42rzAQW9yHwBvCc1HwbndSgd7Qh/ObUiAEYDYAGB6rp8Ag
+
+H/nqkQDKbXNjIG9c/EZhujr0I63KBIAI2kbs0FG7beICmgEAphyom1eduss2AaRGm7X2CDrH3zJATJnzGpbcgAYpAKZbgAAAUTG6gHfC0gJ3477cAAJTWhKgCAZQG/mMKR2pQsd9aLwALvsDk7LoNOwYJNt3WOQv1qALOHHUNX4iGdisKQBG7iG5BHAf24tF9pohsAywH/PntV7t3mreegvZGCEBQBiOw91XqONIAchSA1YWzn3ZHuthp7s9v25o
+
+ADuL2EA5duwARAQDYAcgxodu3AG9u+32769jdev33uEBGACsHW6RbQB8xhxYQYIFfa2jd3ND2J9G4R2CtUC/TqvPMAYGNDpBX7Ncrla1xGBX2b7d9gBGhHAA8xFzj+B+0TC7BAA=
 ```
 %%
