--- a/基础物理/杨振宁/第十四讲.md
+++ b/基础物理/杨振宁/第十四讲.md
@@ -103,66 +103,70 @@ $$F_{1}=F_{3}=\frac{mg}{2},\quad F_{2}=F_{4}=0$$
 
 But if these two touch the ground and these two do not, then you have the other solution, which is the opposite of this. And you can have any linear combination of them. So if you have a smooth floor, if you put this heavy stool on it, what happens? You know all four of them would have the same weight. In other words, the true solution for a physical situation is each of the forces, F1 to F4, is equal to one-quarter of mg.How do you know? Why do you believe that all four are equal for a real situation? （但如果这两个接触地面而这两个不接触，那么你就得到了另一种解决方案，与这个相反。而且你可以有它们的任何线性组合。所以如果你有一个光滑的地板，如果你把这个沉重的凳子放在上面，会发生什么？你知道所有四个都会承受相同的重量。换句话说，物理情况的真正解决方案是每个力，F1到F4，等于mg的四分之一。你怎么知道？为什么你相信在实际情况中所有四个都是相等的？）
 
-It is because there are other things that you have to consider, and that comes to elasticity. The ground is slightly elastic, 
-
-(50.13)
+It is because there are other things that you have to consider, and that comes to elasticity. The ground is slightly elastic, and if one leg goes down too much, there will be a tremendous force forcing it upwards. So if it is an elastic thing, so think of a rubber floor, then it will become, then it is, if you want to really analyze this, it won't be that one sinks deeper than another one.The simplest case is all four of them to go down by the same amount, and therefore the reaction's force, F1, F2, F3, F4, will also be identical. （这是因为你还需要考虑其他因素，这就涉及到弹性问题。地面具有一定弹性，如果某条腿下陷过深，就会产生巨大的反作用力将其向上推。因此如果考虑弹性地面——比如想象一个橡胶地板——当你真正分析时，就不会出现某条腿比其他腿陷得更深的情况。最理想的状态是四条腿均匀下陷相同深度，这样每条腿受到的反作用力F1、F2、F3、F4也会完全相同。）
 
 
+So if you want to consider a physical case of an over-determined system, then you have to consider the property of the surface. If the surface is uniform, like a rubber or a soft floor, then of course you would get equal ones. But if the floor is such that two of the legs are on rubber, the other two legs are on a hard floor, you immediately know what happens. The two legs would sink deeper into the rubber, and therefore the thing would tilt, and the forces would not be identical on the four legs. （因此，如果你想考虑一个超定系统的物理实例，就必须考虑表面的特性。如果表面是均匀的，比如橡胶或柔软的地板，那么你当然会得到相同的结果。但如果地板的情况是两条腿在橡胶上，另外两条腿在硬地板上，你立刻就能知道会发生什么。两条腿会更深地陷入橡胶中，因此物体会倾斜，四条腿上的力也不会相同。）
+
+### 13.6 
+
+So in that case you need the elasticity. So next we turn to the elasticity question. In the book, it's section 13.6. The book discusses three kinds of stress and strain. First is Young's modulus.If you stretch something, if a cable, you stretch it by delta L. The original length is L. Delta L is the amount you stretch. Then the force is always proportional to the area. If it's a steel cable or a steel rod, if you stretch it, the thicker the rod, of course the larger the force.So it's the force per unit area that's important. Force per unit area is equal to a constant, which is called Young's modulus, times delta L over L. This is called Young's modulus. （因此在这种情况下，你需要考虑弹性。接下来我们转向弹性问题。在书中，这是第13.6节。书中讨论了三种应力和应变。首先是杨氏模量。如果你拉伸某物，比如一根电缆，你将其拉伸了 ΔL。原始长度为 L。ΔL是你拉伸的量。那么力总是与面积成正比。如果是钢缆或钢棒，你拉伸它时，棒越粗，力当然越大。所以重要的是单位面积的力。单位面积的力等于一个常数，称为杨氏模量，乘以ΔL除以L。这就是杨氏模量。）
+
+$$\frac{F}{A}=E \cdot \frac{\Delta L}{L}$$
+
+You should read the table, 13-1. It lists the Young's modulus for steel, for aluminum, for glass, etc., etc. Look at it, you'll see that the larger the Young's modulus, of course the larger the force per unit area. For steel, the Young's modulus is very large. As a consequence, you cannot stretch it very much. It requires tremendous force to stretch it. By the way, this formula also is correct for both plus sign for delta L and minus sign for delta L. If delta L is positive, that means you are stretching it.If delta L is negative, that means you are compressing it. （你应该看一下表13-1。它列出了钢、铝、玻璃等材料的杨氏模量。看看这张表，你会发现杨氏模量越大，单位面积受力当然也越大。钢的杨氏模量非常大，因此你无法将它拉伸太多，需要极大的力才能拉伸它。顺便说一下，这个公式对于 ΔL 的正负号都适用。如果 ΔL 为正，表示你在拉伸材料；如果 ΔL 为负，则表示你在压缩材料。）
 
 
-and if one leg goes down too much, there will be a tremendous force forcing it upwards. So if it is an elastic thing, so think of a rubber floor, then it will become, then it is, if you want to really analyze this, it won't be that one sinks deeper than another one.The simplest case is all four of them to go down by the same amount, and therefore the reaction's force, F1, F2, F3, F4, will also be identical. （这是因为你还需要考虑其他因素，这就涉及到弹性问题。地面具有一定弹性，如果某条腿下陷过深，就会产生巨大的反作用力将其向上推。因此如果考虑弹性地面——比如想象一个橡胶地板——当你真正分析时，就不会出现某条腿比其他腿陷得更深的情况。最理想的状态是四条腿均匀下陷相同深度，这样每条腿受到的反作用力F1、F2、F3、F4也会完全相同。）
+Stretching it and compressing it, if the stretching and the compression are not very large, it follows the same formula. In other words, the same Young's modulus always works for both stretching and compressing. But that's true only for small displacements. If you stretch a steel rod too much, it will break. The precise behavior of a steel rod when you stretch it is an extremely important topic, because if you are an engineer, you have to know what happens. For example, a suspension bridge depends on stretching a cable. And if you stretch the cable too much, it would break, and the bridge would collapse. （拉伸和压缩时，如果拉伸和压缩的幅度不大，遵循相同的公式。也就是说，相同的杨氏模量总是适用于拉伸和压缩。但这只适用于小的位移。如果你把钢棒拉伸得太多，它就会断裂。钢棒在拉伸时的精确行为是一个极其重要的话题，因为如果你是一名工程师，你必须知道会发生什么。例如，悬索桥依赖于拉伸缆绳。如果你把缆绳拉伸得太多，它就会断裂，桥梁就会倒塌。）
 
 
-So if you want to consider a physical case of an over-determined system, then you have to consider the property of the surface. If the surface is uniform, like a rubber or a soft floor, then of course you would get equal ones.But if the floor is such that two of the legs are on rubber, the other two legs are on a hard floor, you immediately know what happens. The two legs would sink deeper into the rubber, and therefore the thing would tilt, and the forces would not be identical on the four legs. （因此，如果你想考虑一个超定系统的物理实例，就必须考虑表面的特性。如果表面是均匀的，比如橡胶或柔软的地板，那么你当然会得到相同的结果。但如果地板的情况是两条腿在橡胶上，另外两条腿在硬地板上，你立刻就能知道会发生什么。两条腿会更深地陷入橡胶中，因此物体会倾斜，四条腿上的力也不会相同。）
-
-
-So in that case you need the elasticity.So next we turn to the elasticity question. In the book, it's section 13.6. The book discusses three kinds of stress and strain. First is Young's modulus.If you stretch something, if a cable, you stretch it by delta L. The original length is L. Delta L is the amount you stretch. Then the force is always proportional to the area. If it's a steel cable or a steel rod, if you stretch it, the thicker the rod, of course the larger the force.So it's the force per unit area that's important. Force per unit area is equal to a constant, which is called Young's modulus, times delta L over L. This is called Young's modulus. （因此在这种情况下，你需要考虑弹性。接下来我们转向弹性问题。在书中，这是第13.6节。书中讨论了三种应力和应变。首先是杨氏模量。如果你拉伸某物，比如一根电缆，你将其拉伸了ΔL。原始长度为L。ΔL是你拉伸的量。那么力总是与面积成正比。如果是钢缆或钢棒，你拉伸它时，棒越粗，力当然越大。所以重要的是单位面积的力。单位面积的力等于一个常数，称为杨氏模量，乘以ΔL除以L。这就是杨氏模量。）
-
-
-You should read the table, 13-1.It lists the Young's modulus for steel, for aluminum, for glass, etc., etc. Look at it, you'll see that the larger the Young's modulus, of course the larger the force per unit area. For steel, the Young's modulus is very large.As a consequence, you cannot stretch it very much. It requires tremendous force to stretch it. By the way, this formula also is correct for both plus sign for delta L and minus sign for delta L. If delta L is positive, that means you are stretching it.If delta L is negative, that means you are compressing it. （你应该看一下表13-1。它列出了钢、铝、玻璃等材料的杨氏模量。看看这张表，你会发现杨氏模量越大，单位面积受力当然也越大。钢的杨氏模量非常大，因此你无法将它拉伸太多，需要极大的力才能拉伸它。顺便说一下，这个公式对于ΔL的正负号都适用。如果ΔL为正，表示你在拉伸材料；如果ΔL为负，则表示你在压缩材料。）
-
-
-Stretching it and compressing it, if the stretching and the compression are not very large, it follows the same formula. In other words, the same Young's modulus always works for both stretching and compressing.But that's true only for small displacements. If you stretch a steel rod too much, it will break. The precise behavior of a steel rod when you stretch it is an extremely important topic, because if you are an engineer, you have to know what happens.For example, a suspension bridge depends on stretching a cable. And if you stretch the cable too much, it would break, and the bridge would collapse. （拉伸和压缩时，如果拉伸和压缩的幅度不大，遵循相同的公式。也就是说，相同的杨氏模量总是适用于拉伸和压缩。但这只适用于小的位移。如果你把钢棒拉伸得太多，它就会断裂。钢棒在拉伸时的精确行为是一个极其重要的话题，因为如果你是一名工程师，你必须知道会发生什么。例如，悬索桥依赖于拉伸缆绳。如果你把缆绳拉伸得太多，它就会断裂，桥梁就会倒塌。）
-
-
-So therefore, if you study engineering, you would need to know the behavior of steel rods when the stress and the strain become too large.So read that section of the book. It has a diagram which indicates experimentally how, when you stretch too much, the rod would break. Now, does one know, does one understand that curve? To a certain extent.But the fundamental understanding becomes extremely complicated. Why? Because a steel rod is a crystal. （因此，如果你学习工程学，你需要知道当应力和应变过大时钢筋的行为。所以阅读书中那部分内容。它有一张图表，通过实验表明当你过度拉伸时，钢筋会断裂。那么，有人知道、有人理解那条曲线吗？在某种程度上是的。但根本的理解变得极其复杂。为什么？因为钢筋是一种晶体。）
+So therefore, if you study engineering, you would need to know the behavior of steel rods when the stress and the strain become too large.So read that section of the book. It has a diagram which indicates experimentally how, when you stretch too much, the rod would break. Now, does one know, does one understand that curve? To a certain extent. But the fundamental understanding becomes extremely complicated. Why? Because a steel rod is a crystal. （因此，如果你学习工程学，你需要知道当应力和应变过大时钢筋的行为。所以阅读书中那部分内容。它有一张图表，通过实验表明当你过度拉伸时，钢筋会断裂。那么，有人知道、有人理解那条曲线吗？在某种程度上是的。但根本的理解变得极其复杂。为什么？因为钢筋是一种晶体。）
 
 
 Now, you can have a perfect crystal and a non-perfect crystal.And when you stretch it too much, or when you compress it too much, the crystal becomes distorted. But actually, a rod is never a perfect crystal. It has defects.And when you try to stretch it or compress it, these defects rearrange themselves. So that's an extremely complicated subject. And if you study engineering, you'll be dealing with such things.Or rather, it's like this. If you study solid-state physics, you will deal with such things. If you study engineering, you'll also deal with such things, but from different viewpoints.（现在，你可以拥有一个完美的晶体和一个不完美的晶体。当你过度拉伸或过度压缩它时，晶体会发生变形。但实际上，一根棒材从来都不是完美的晶体，它存在缺陷。当你试图拉伸或压缩它时，这些缺陷会自行重新排列。这是一个极其复杂的课题。如果你学习工程学，你会接触到这类问题。或者说，情况是这样的：如果你学习固态物理学，你会研究这类问题；如果你学习工程学，你也会处理这类问题，但角度不同。）
 
 
-For a physicist, you'll be dealing with, for example, the defects. When you stretch it too much, you would have rearrangement of the defects. And that's a very complicated, very fascinating subject.And there are people who devote their lives to it. If you are an engineering student, you do not care about how precisely it goes inside. But you want to know the phenomena.What kind of steel would have what kind of stress-strain curve? And you base your judgment about how to make cables, or how to make buildings on such a phenomenological curve. （对于物理学家来说，你将处理诸如缺陷之类的问题。当你过度拉伸材料时，缺陷会重新排列。这是一个非常复杂且引人入胜的课题，有些人甚至为此奉献一生。如果你是工程专业的学生，你可能并不关心内部精确的运作机制，但你想要了解现象。什么样的钢材会对应什么样的应力-应变曲线？你会基于这样的现象学曲线来判断如何制造电缆或建造建筑。）
+For a physicist, you'll be dealing with, for example, the defects. When you stretch it too much, you would have rearrangement of the defects. And that's a very complicated, very fascinating subject. And there are people who devote their lives to it. If you are an engineering student, you do not care about how precisely it goes inside. But you want to know the phenomena. What kind of steel would have what kind of stress-strain curve? And you base your judgment about how to make cables, or how to make buildings on such a phenomenological curve. （对于物理学家来说，你将处理诸如缺陷之类的问题。当你过度拉伸材料时，缺陷会重新排列。这是一个非常复杂且引人入胜的课题，有些人甚至为此奉献一生。如果你是工程专业的学生，你可能并不关心内部精确的运作机制，但你想要了解现象。什么样的钢材会对应什么样的应力-应变曲线？你会基于这样的现象学曲线来判断如何制造电缆或建造建筑。）
 
-So it's the same complicated subject, but viewed from different ways by a physicist and by an engineer. Now, another one is shear modulus.If you have a block with a length of air, instead of stretching it or compressing it, you can shear it by making it move this way. You anchor it. This point is clamped, and instead of compressing it or stretching it, you shear it.And this distance is called delta x. In that case, the force per unit area is again force per unit area is equal to a shearing stress.（所以这是同一个复杂的课题，只是物理学家和工程师从不同的角度看待它。现在，另一个概念是剪切模量。如果你有一块长度为空气的块体，不是拉伸或压缩它，而是通过让它这样移动来剪切它。你固定它。这一点被夹住，不是压缩或拉伸它，而是剪切它。这个距离称为Δx。在这种情况下，单位面积的力再次是单位面积的力等于剪切应力。）
+So it's the same complicated subject, but viewed from different ways by a physicist and by an engineer. Now, another one is shear modulus. If you have a block with a length of L, instead of stretching it or compressing it, you can shear it by making it move this way. You anchor it. This point is clamped, and instead of compressing it or stretching it, you shear it.And this distance is called delta x. In that case, the force per unit area is again force per unit area is equal to a shearing stress.（所以这是同一个复杂的课题，只是物理学家和工程师从不同的角度看待它。现在，另一个概念是剪切模量。如果你有一块长度为 L 的块体，不是拉伸或压缩它，而是通过让它这样移动来剪切它。你固定它。这一点被夹住，不是压缩或拉伸它，而是剪切它。这个距离称为 Δx。在这种情况下，单位面积的力再次是单位面积的力等于剪切应力。）
 
+$$\frac{F}{A}=G \cdot \frac{\Delta L}{L}$$
 
 Shearing modulus times delta x over L. And the book also talks about the hydraulic stress. That is, if you have, if you put a, say, a rubber ball. If you move that rubber ball deep into a swimming pool, it will be compressed.And if a diver takes that down to very deep depths, it will become much smaller. And if you take a steel ball, it's not going to change very much. But if it's under tremendous pressure, it will still be compressed.And in that case, the pressure is equal to a Burke modulus times change of volume divided by volume. （剪切模量乘以Δx除以L。书中还提到了液压应力。也就是说，如果你把一个橡胶球放进游泳池深处，它会被压缩。如果潜水员把它带到非常深的地方，它会变得更小。而如果是钢球，它不会有太大变化。但在巨大的压力下，它仍然会被压缩。在这种情况下，压力等于体积弹性模量乘以体积变化除以体积。）
 
+$$p = B \frac{\Delta V}{V}$$
 
-The book talks about these three, but actually the problem is much, much more complicated than this. Because we talk, for example, about the stress and strain.The stress and strain are not just a vector. Take this case. The displacement is in this direction.And the force could be in more than that direction. This is a simplified case. So in general, the stress and strain are both tensors.Tensors are more complicated than vectors. So therefore, the relationship between stress and strain is a very complicated subject.  And that itself is a subject which has been dealt with both from the physicist's viewpoint and from the engineering viewpoint.（这本书讨论了这三个方面，但实际上问题远比这复杂得多。因为我们谈论的，比如应力和应变，它们不仅仅是矢量。以这个例子来说，位移是在这个方向上的，而力可能来自不止一个方向。这是一个简化的情况。所以一般来说，应力和应变都是张量。张量比矢量要复杂得多。因此，应力和应变之间的关系是一个非常复杂的课题。而这一课题本身既从物理学家的角度，也从工程师的角度进行了探讨。）
+The book talks about these three, but actually the problem is much, much more complicated than this. Because we talk, for example, about the stress and strain.The stress and strain are not just a vector. Take this case. The displacement is in this direction. And the force could be in more than that direction. This is a simplified case. So in general, the stress and strain are both tensors.Tensors are more complicated than vectors. So therefore, the relationship between stress and strain is a very complicated subject.  And that itself is a subject which has been dealt with both from the physicist's viewpoint and from the engineering viewpoint.（这本书讨论了这三个方面，但实际上问题远比这复杂得多。因为我们谈论的，比如应力和应变，它们不仅仅是矢量。以这个例子来说，位移是在这个方向上的，而力可能来自不止一个方向。这是一个简化的情况。所以一般来说，应力和应变都是张量。张量比矢量要复杂得多。因此，应力和应变之间的关系是一个非常复杂的课题。而这一课题本身既从物理学家的角度，也从工程师的角度进行了探讨。）
 
 ## 第 14 章：引力
 
-OK, now we are going to leave Chapter 13 and go to Chapter 14. Chapter 14 talks about gravity. The gravitational force between two points is equal to, we usually write a minus, and the gravitational constant times the mass of the first one, mass of the second one, divided by r squared.Where g is equal to 6.67 times 10 to the minus 11th Newton meter squared divided by kilogram squared. （好的，现在我们即将结束第13章，进入第14章。第14章讨论的是引力。两点之间的引力等于——我们通常会写一个负号——引力常数乘以第一个物体的质量，再乘以第二个物体的质量，然后除以r的平方。其中g等于6.67乘以10的负11次方牛顿·米平方除以千克平方。）
+OK, now we are going to leave Chapter 13 and go to Chapter 14. Chapter 14 talks about gravity. The gravitational force between two points is equal to, we usually write a minus, and the gravitational constant times the mass of the first one, mass of the second one, divided by r squared.Where g is equal to 6.67 times 10 to the minus 11th Newton meter squared divided by kilogram squared. （好的，现在我们即将结束第 13 章，进入第 14 章。第 14 章讨论的是引力。两点之间的引力等于——我们通常会写一个负号——引力常数乘以第一个物体的质量，再乘以第二个物体的质量，然后除以r的平方。其中g等于6.67乘以10的负11次方牛顿·米平方除以千克平方。）
 
-Actually, that the gravitational force between two things is inversely proportional distance squared was already guessed at around Newton's time. We, in general, attribute the beginning of modern science to Newton's work called Principia.But of course, Newton was living in an environment in which after the Renaissance in Europe, there were all kinds of intellectual pursuits including, for example, the proof that we just used, that 1 plus 1 half plus 1 third plus 1 quarter and so on and so forth is equal to infinity. But much more complicated formula than that were already known by complicated arguments by many people. So, there was Renaissance.（事实上，两个物体之间的引力与距离平方成反比这一规律在牛顿时代就已经被推测出来了。我们通常将现代科学的开端归功于牛顿的著作《自然哲学的数学原理》。但当然，牛顿所处的时代正值欧洲文艺复兴之后，那时有各种各样的学术探索，比如我们刚刚用到的证明——1加1/2加1/3加1/4等等等于无穷大。但比这复杂得多的公式，早已通过许多人的复杂论证为人所知。所以，那是文艺复兴的时代。）
+$$F=-G \frac{m_{1}m_{2}}{r^2} \qquad G=6.67 \times 10^{-11}\,\text{N}\cdot \text{m}^2/\text{kg}^2$$
 
-The Renaissance created a general atmosphere of intellectual pursuit and Newton lived in that atmosphere. But he was, of course, a great genius and we shall see how great a genius he was in a few minutes. He was the one who formulated this formula, but as I said, it has already been guessed at by many people.Now, actually, when he was in his 20s, he already had this formula in his mind, but he did not publish it for 20 years. Why did he not publish it? Because he wanted to understand one thing, and that is, there was already before him Kepler's three laws. （文艺复兴时期营造了一种普遍追求知识的氛围，而牛顿正是在这种氛围中成长起来的。当然，他是一位伟大的天才，我们稍后就能见识到他有多么非凡。虽然这个公式是由他提出的，但正如我所说，其实很多人早已对此有所猜测。事实上，牛顿在二十多岁时就已经在脑海中构思出了这个公式，但他却将其搁置了二十年才发表。为什么迟迟不发表呢？因为他想要弄清楚一件事——在他之前，开普勒已经提出了三大定律。）
+Actually, that the gravitational force between two things is inversely proportional distance squared was already guessed at around Newton's time. We, in general, attribute the beginning of modern science to Newton's work called Principia. But of course, Newton was living in an environment in which after the Renaissance in Europe, there were all kinds of intellectual pursuits including, for example, the proof that we just used, that 1 plus 1 half plus 1 third plus 1 quarter and so on and so forth is equal to infinity. But much more complicated formula than that were already known by complicated arguments by many people. So, there was Renaissance.（事实上，两个物体之间的引力与距离平方成反比这一规律在牛顿时代就已经被推测出来了。我们通常将现代科学的开端归功于牛顿的著作《自然哲学的数学原理》。但当然，牛顿所处的时代正值欧洲文艺复兴之后，那时有各种各样的学术探索，比如我们刚刚用到的证明——1 加 1/2 加 1/3加 1/4 等等等于无穷大。但比这复杂得多的公式，早已通过许多人的复杂论证为人所知。所以，那是文艺复兴的时代。）
 
+The Renaissance created a general atmosphere of intellectual pursuit and Newton lived in that atmosphere. But he was, of course, a great genius and we shall see how great a genius he was in a few minutes. He was the one who formulated this formula, but as I said, it has already been guessed at by many people. Now, actually, when he was in his 20s, he already had this formula in his mind, but he did not publish it for 20 years. Why did he not publish it? Because he wanted to understand one thing, and that is, there was already before him Kepler's three laws. （文艺复兴时期营造了一种普遍追求知识的氛围，而牛顿正是在这种氛围中成长起来的。当然，他是一位伟大的天才，我们稍后就能见识到他有多么非凡。虽然这个公式是由他提出的，但正如我所说，其实很多人早已对此有所猜测。事实上，牛顿在二十多岁时就已经在脑海中构思出了这个公式，但他却将其搁置了二十年才发表。为什么迟迟不发表呢？因为他想要弄清楚一件事——在他之前，开普勒已经提出了三大定律。）
 
-I'm sure you have learned about that in high school.And Kepler's law says that if you have a sun here and you have an earth here, then the earth would go around the sun. This is a very bad ellipse. So, Newton wanted to prove this and we are going to prove this later.But Newton realized that the earth is not a point, it's a small sphere. The sun is not a point, it's a big sphere. And if he proposes a gravitational force, it's the gravitational force between every part of the sun and every part of the earth.（我相信你在高中就学过这个。开普勒定律指出，如果这里有一个太阳，这里有一个地球，那么地球就会围绕太阳运转。这个椭圆画得很糟糕。牛顿想要证明这一点，我们稍后也会证明。但牛顿意识到地球不是一个点，而是一个小球体。太阳也不是一个点，而是一个大球体。如果他提出引力，那就是太阳的每一部分与地球的每一部分之间的引力。）
+I'm sure you have learned about that in high school. And Kepler's law says that if you have a sun here and you have an earth here, then the earth would go around the sun. This is a very bad ellipse. So, Newton wanted to prove this and we are going to prove this later.But Newton realized that the earth is not a point, it's a small sphere. The sun is not a point, it's a big sphere. And if he proposes a gravitational force, it's the gravitational force between every part of the sun and every part of the earth.（我相信你在高中就学过这个。开普勒定律指出，如果这里有一个太阳，这里有一个地球，那么地球就会围绕太阳运转。这个椭圆画得很糟糕。牛顿想要证明这一点，我们稍后也会证明。但牛顿意识到地球不是一个点，而是一个小球体。太阳也不是一个点，而是一个大球体。如果他提出引力，那就是太阳的每一部分与地球的每一部分之间的引力。）
 
 So, you should not treat the sun as a point and the earth as a point. He first proved that if there were points, then the earth would move in an orbit, which is an ellipse. Which, of course, made him very happy because that's what Kepler had proven experimentally.No, I shouldn't say that. Kepler used experimental data, Kepler analyzed experimental data and found for the first time in the history of mankind that the trajectory of the earth, of Mars, actually he was looking at Mars, was an ellipse and not a circle. （所以，你不能把太阳看作一个点，地球也看作一个点。他首先证明，如果它们都是点的话，地球就会在一个轨道上运动，这个轨道是一个椭圆。当然，这让他非常高兴，因为开普勒已经通过实验证明了这一点。不，我不应该这么说。开普勒使用了实验数据，开普勒分析了实验数据，并首次在人类历史上发现地球、火星的轨迹——实际上他观测的是火星——是椭圆而非圆形。）
 
-That was a great revolution, we'll come to that later.So, Newton knew that. And Newton wanted to show that the big sphere attracting the small sphere gives you the same result as two points attracting each other. And that's the book called the Scher theorem.The Scher theorem, this theorem took Newton 20 years. And after he has completely mastered that point, he wrote his book. Actually, there is another reason.There were people who were telling him that if you don't publish, other people will publish it. So, he rushed into publication that the book is called the Principia. （那是一场伟大的革命，我们稍后会谈到。所以，牛顿知道这一点。牛顿想证明大球吸引小球的结果与两个质点相互吸引的结果相同。这就是所谓的《谢尔定理》。《谢尔定理》，这个定理花了牛顿20年的时间。在他完全掌握了这一点之后，他写下了他的书。实际上，还有另一个原因。有人告诉他，如果你不发表，别人就会发表。所以，他匆忙出版了这本书，书名叫《自然哲学的数学原理》。）
+That was a great revolution, we'll come to that later.So, Newton knew that. And Newton wanted to show that the big sphere attracting the small sphere gives you the same result as two points attracting each other. And that's the book called the Shell theorem.The Shell theorem, this theorem took Newton 20 years. And after he has completely mastered that point, he wrote his book. Actually, there is another reason.There were people who were telling him that if you don't publish, other people will publish it. So, he rushed into publication that the book is called the Principia. （那是一场伟大的革命，我们稍后会谈到。所以，牛顿知道这一点。牛顿想证明大球吸引小球的结果与两个质点相互吸引的结果相同。这就是所谓的 Shell 定理。Shell 定理，这个定理花了牛顿 20 年的时间。在他完全掌握了这一点之后，他写下了他的书。实际上，还有另一个原因。有人告诉他，如果你不发表，别人就会发表。所以，他匆忙出版了这本书，书名叫《自然哲学的数学原理》。）
 
-And that's, of course, one of the great events in the history of mankind.Now, what is the Scher theorem? The Scher theorem says that if you have a Scher, if you have a uniform Scher, then if you have a gravitational force by the Scher on a body here, then that gravitational force is equivalent to you compress all the Scher's mass into a single point. And you use the same formula, same gravitational formula of attraction between this center and this point. In other words, the Scher, as far as the gravitational attraction is concerned, can be replaced by a single point.That's called the Scher theorem. （当然，这是人类历史上最伟大的事件之一。那么，什么是谢尔定理呢？谢尔定理说的是，如果你有一个谢尔，一个均匀的谢尔，那么如果谢尔对这里的物体有引力作用，那么这个引力就相当于你把谢尔的所有质量压缩成一个点。然后你使用相同的公式，这个中心和这个点之间相同的引力公式。换句话说，就引力而言，谢尔可以被一个点所取代。这就是所谓的谢尔定理。）
-
-
-Now, let's try to prove that. Suppose this distance is R, this distance is A. A is the distance from the center of the point P. This is the center, point O. And let us now consider a ring at an angle theta.So now we consider this ring. And we will consider instead of the Scher, a part of the Scher, just a ring. Let's call this angle phi.This angle is theta. What is the area of the ring? The circumference of the ring is 2 pi R times sine theta. The ring is a circle.Its diameter, its radius, is R sine theta. So 2 pi R sine theta is the circumference. So the area of that is equal to that circumference times the width of the ring.The width of the ring is R d theta. Agreed? It's like a piece of watermelon skin. （现在，让我们尝试证明这一点。假设这段距离为R，这段距离为A。A是从点P到中心的距离。这是中心点O。现在让我们考虑一个角度为θ的圆环。现在我们来看这个圆环。我们将考虑的不是整个球面，而是球面的一部分，仅仅是一个圆环。我们称这个角度为φ。这个角度是θ。这个圆环的面积是多少？圆环的周长为2πR乘以sinθ。这个圆环是一个圆。它的直径，或者说半径，是R sinθ。因此，2πR sinθ就是周长。那么这个圆环的面积等于周长乘以圆环的宽度。圆环的宽度是R dθ。明白吗？它就像一块西瓜皮。）
+And that's, of course, one of the great events in the history of mankind. Now, what is the Shell theorem? The Shell theorem says that if you have a Shell, if you have a uniform Shell, then if you have a gravitational force by the Shell on a body here, then that gravitational force is equivalent to you compress all the Shell's mass into a single point. And you use the same formula, same gravitational formula of attraction between this center and this point. In other words, the Shell, as far as the gravitational attraction is concerned, can be replaced by a single point.That's called the Shell theorem. （当然，这是人类历史上最伟大的事件之一。那么，什么是 Shell 定理呢？Shell 定理说的是，如果你有一个壳，一个均匀的壳，那么如果壳对这里的物体有引力作用，那么这个引力就相当于你把壳的所有质量压缩成一个点。然后你使用相同的公式，这个中心和这个点之间相同的引力公式。换句话说，就引力而言，壳可以被一个点所取代。这就是所谓的 Shell 定理。）
 
 
-This circle is 2 pi R sine theta.The width of the skin is R d theta. The mass of the ring is the traditional area. If the depth of the ring is T, and the density is rho, then multiply that by rho T. Rho is equal to density.T is equal to thickness. This is the mass of the ring. So there are so many things in the mass of the ring.The force is in this direction. So force by ring at feet is equal to rho T times this thing. If the mass of this thing is M, then it turns out GM divided by the distance squared.What is the distance squared? It's R sine theta squared. The distance squared is R sine theta squared plus this squared, which is plus A times R cosine theta squared. But this is not right.Because this is the force. （这个圆的周长是2πR sinθ。皮肤的宽度是R dθ。环的质量是传统面积。如果环的深度是T，密度是ρ，那么再乘以ρT。ρ代表密度，T代表厚度。这就是环的质量。所以环的质量包含了很多因素。力的方向是这个方向。因此，脚部受到的环的力等于ρT乘以这个量。如果这个东西的质量是M，那么结果是GM除以距离的平方。距离的平方是多少？是R sinθ的平方。距离的平方是R sinθ的平方加上这个量的平方，也就是加上A乘以R cosθ的平方。但这并不正确。因为这是力。）
+Now, let's try to prove that. Suppose this distance is R, this distance is A. A is the distance from the center of the point P. This is the center, point O. And let us now consider a ring at an angle theta.So now we consider this ring. And we will consider instead of the Scher, a part of the Scher, just a ring. Let's call this angle phi.This angle is theta. What is the area of the ring? The circumference of the ring is 2 pi R times sine theta. The ring is a circle.Its diameter, its radius, is R sine theta. So 2 pi R sine theta is the circumference. So the area of that is equal to that circumference times the width of the ring.The width of the ring is R d theta. Agreed? It's like a piece of watermelon skin. （现在，让我们尝试证明这一点。假设这段距离为 R，这段距离为 A。A 是从点 P 到中心的距离。这是中心点 O。现在让我们考虑一个角度为 $θ$ 的圆环。现在我们来看这个圆环。我们将考虑的不是整个球面，而是球面的一部分，仅仅是一个圆环。我们称这个角度为 $φ$。这个角度是 $θ$。这个圆环的面积是多少？圆环的周长为 $2πR$ 乘以 $\sinθ$。这个圆环是一个圆。它的直径，或者说半径，是R sinθ。因此，2πR sinθ就是周长。那么这个圆环的面积等于周长乘以圆环的宽度。圆环的宽度是R dθ。明白吗？它就像一块西瓜皮。）
+
+圆环的周长：$2 \pi r \sin \theta$      圆环的面积：$2 \pi r \sin \theta \cdot r \mathrm{d}\theta$
+
+
+This circle is 2 pi R sine theta.The width of the skin is R d theta. The mass of the ring is the traditional area. If the depth of the ring is T, and the density is rho, then multiply that by rho T. Rho is equal to density.T is equal to thickness. This is the mass of the ring. So there are so many things in the mass of the ring.The force is in this direction. So force by ring at P is equal to rho T times this thing. If the mass of this thing is M, then it turns out GM divided by the distance squared.What is the distance squared? It's R sine theta squared. The distance squared is R sine theta squared plus this squared, which is plus A times R cosine theta squared. But this is not right.Because this is the force. （这个圆的周长是2πR sinθ。圆环的宽度是R dθ。环的质量，如果环的深度是 T，密度是ρ，那么再乘以 ρT。ρ代表密度，T 代表厚度。这就是环的质量。所以环的质量包含了很多因素。力的方向是这个方向。因此，P 受到的环的力等于ρT乘以这个量。如果这个东西的质量是M，那么结果是GM除以距离的平方。距离的平方是多少？是R sinθ的平方。距离的平方是R sinθ的平方加上这个量的平方，也就是加上A乘以R cosθ的平方。但这并不正确。因为这是力。）
+
+设外壳的厚度是 $T$，密度为 $\rho$，则环的质量为 $2\pi r \sin \theta T\rho r\mathrm{d}\theta$
+
+(1.14.27)
 
 
 Every force has a component along the axis. So it has to multiply by cosine phi.Does everybody agree with this? But we know what cosine theta is. What is cosine theta? Cosine theta is equal to A minus R cosine phi divided by the radius. The radius is the square root of the denominator.I called that F just now. So F is equal to 2 pi rho T R squared GM times the integral of sine theta d theta times A minus R cosine theta divided by the square root of R square sine square theta plus A minus R cosine theta squared. （每个力都有一个沿轴的分量。因此必须乘以余弦φ。大家都同意这一点吗？但我们知道余弦θ是什么。余弦θ等于A减去R乘以余弦φ，再除以半径。半径就是分母的平方根。我刚才称之为F。因此，F等于2πρTR²GM乘以正弦θdθ的积分，再乘以A减去R乘以余弦θ，除以R²正弦²θ加上A减去R乘以余弦θ的平方的平方根。）
