--- a/基础物理/杨振宁/第十讲.md
+++ b/基础物理/杨振宁/第十讲.md
@@ -44,11 +44,11 @@ That theorem is not stated in the book.The book probably thinks that's a little 
 If it is elastic, if elastic, this formula, this first conservation of momentum is always correct. It may or may not be elastic.If it's a billet ball colliding with each other, it's almost 100% elastic. But if it's two mud balls, then they might even stick together, so it's inelastic. Now let us talk about the billet ball case, the elastic case.If it's elastic, then the total energy is conserved. So we have M1 V1 squared is equal to one-half M1 V1 prime squared plus one-half M2 V2 prime squared. （如果是弹性的，如果是弹性的，这个公式，这个动量守恒总是正确的。它可能是弹性的，也可能不是。如果是两个弹子球相互碰撞，几乎100%是弹性的。但如果是两个泥球，它们甚至可能粘在一起，所以是非弹性的。现在让我们谈谈弹子球的情况，弹性情况。如果是弹性的，那么总能量是守恒的。所以我们有M1 V1平方等于二分之一M1 V1撇平方加二分之一M2 V2撇平方。）
 
 So if the initial velocity is known, if V1 is known, then we have two unknowns, V1 prime and V2 prime.We have two equations, so we can solve for the two. In this particular case, the solution is particularly simple because we can write the first equation as V1. You can do this in any number of ways.A simple way is this. I first move the momentum equation into this form, and I move this part over, and I get M1 V1 minus V1 prime times V1 plus V1 prime is equal to one-half M2 V2 prime. （因此，如果初速度已知，即V1已知，那么我们有两个未知数：V1'和V2'。我们有两个方程，因此可以求解这两个未知数。在这个特定情况下，解特别简单，因为我们可以将第一个方程写成V1的形式。你可以用多种方法做到这一点。一个简单的方法是这样的：首先将动量方程改写为这种形式，然后将这部分移项，得到M1 V1减去V1'乘以V1加上V1'等于二分之一M2 V2'。）
-
 $$\begin{align}
 m_{1}v_{1} &= m_{1}v_{1}' + m_{2}v_{2}' \\[1.2ex]
 \frac{1}{2}m_{1}v_{1}^2 &= \frac{1}{2}m_{1}v_{1}'^2 + \frac{1}{2}m_{2} v_{2}'^2
-\end{align}$$改下一下：
+\end{align}$$
+改下一下：
 $$\begin{align}
 m_{1}(v_{1}-v_{1}')&=  m_{2}v_{2}' \\[1.2ex]
 m_{1}(v_{1}-v_{1}')(v_{1}+v_{1}') &= m_{2}v_{2}'^2 
